fix: fix warnings
opsit-dsl-core/src/main/java/io/opsit/explang/Funcs.java